fix contact page spacing

--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -1,7 +1,7 @@
 .contact__info {
   display: flex;
 
-  :first-child {
+  > :first-child {
     margin-right: 12px;
   }
 }
